fix(tabs): Fixing cui-tabs--justified being too small - SPARK-29316

--- a/core/scss/ng/tabs.scss
+++ b/core/scss/ng/tabs.scss
@@ -34,4 +34,18 @@
       }
     }
   }
+
+  .center {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.#{$cui}-tab--justified {
+  .#{$cui}-tab__list {
+    display: flex;
+    .#{cui}-tab__item {
+      flex-grow: 1;
+    }
+  }
 }
